logging.properties in endorsed dir
logging.properties needs to be in the endorsed dir - if its not,
Jenkins won't load it.